--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Django==5.0.6
 djangorestframework==3.15.2
 drf-spectacular==0.27.2
 python-decouple==3.8
+djoser==2.2.3
+djangorestframework_simplejwt==5.3.1
